# backend/docs/swagger.json
@@ -10,11 +10,11 @@
     "paths": {
         "/getrecipes/{userID}": {
             "get": {
-                "description": "Get recipes based on userID",
+                "description": "Get saved recipes based on userID from MongoDB",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get saved recipe data from mongodb database",
+                "summary": "Get saved recipes based on userID",
                 "parameters": [
                     {
                         "type": "string",
@@ -24,7 +24,20 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.SavedRecipeResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.RespMessage"
+                        }
+                    }
+                }
             }
         },
         "/recipe/{id}": {
@@ -48,6 +61,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.RecipeInfo"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.RespMessage"
                         }
                     }
                 }
@@ -75,14 +94,20 @@
                         "schema": {
                             "$ref": "#/definitions/api.RecipeSearchResp"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.RespMessage"
+                        }
                     }
                 }
             }
         },
         "/save/{userID}/{recipeID}": {
-            "get": {
-                "description": "Saves recipe based on userID and recipeID",
-                "summary": "Save recipe information to mongodb database",
+            "post": {
+                "description": "Saves recipe based on userID and recipeID to MongoDB",
+                "summary": "Save user's saved recipe",
                 "parameters": [
                     {
                         "type": "string",
@@ -99,7 +124,20 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.RespMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.RespMessage"
+                        }
+                    }
+                }
             }
         }
     },
@@ -366,6 +404,23 @@
                 }
             }
         },
+        "api.RecipeMinimal": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "summary": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "api.RecipeSearchResp": {
             "type": "object",
             "properties": {
@@ -383,6 +438,25 @@
                 },
                 "totalResults": {
                     "type": "integer"
+                }
+            }
+        },
+        "api.RespMessage": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.SavedRecipeResp": {
+            "type": "object",
+            "properties": {
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.RecipeMinimal"
+                    }
                 }
             }
         },
