# backend/handlers/recipes.go
@@ -4,6 +4,7 @@ import (
 	"CS411-Team-Project/backend/api"
 	"encoding/json"
 	"fmt"
+	"log"
 	"net/http"
 	"os"
 
@@ -15,6 +16,7 @@ import (
 // @Param       query query string true "Recipe search by natural language query i.e 'italian with egg'"
 // @Produce     json
 // @Success     200 {object} api.RecipeSearchResp
+// @Failure     500  {object}  api.RespMessage
 // @Router      /recipes [get]
 func SearchRecipes(ctx *gin.Context) {
 	client := api.NewClient(os.Getenv("RECIPE_API_KEY")) // get API key fron env var
@@ -33,6 +35,7 @@ func SearchRecipes(ctx *gin.Context) {
 // @Produce     json
 // @Param       id  path     int true "Recipe ID"
 // @Success     200 {object} api.RecipeInfo
+// @Failure     500  {object}  api.RespMessage
 // @Router      /recipe/{id} [get]
 func GetRecipeInfo(ctx *gin.Context) {
 	client := api.NewClient(os.Getenv("RECIPE_API_KEY")) // get API key fron env var
@@ -46,31 +49,45 @@ func GetRecipeInfo(ctx *gin.Context) {
 	ctx.Data(http.StatusOK, gin.MIMEJSON, b)
 }
 
-// @Summary     Save recipe information to mongodb database
-// @Description Saves recipe based on userID and recipeID
+// @Summary     Save user's saved recipe
+// @Description Saves recipe based on userID and recipeID to MongoDB
 // @Param       userID path string true "userID"
 // @Param		recipeID path string true "recipeID"
-// @Router      /save/{userID}/{recipeID} [get]
+// @Success     200 {object} api.RespMessage
+// @Failure     500  {object}  api.RespMessage
+// @Router      /save/{userID}/{recipeID} [post]
 func RecipesSave(ctx *gin.Context) {
 	client := api.NewClient(os.Getenv("RECIPE_API_KEY")) // get API key fron env var
 	userID := ctx.Param("userID")
 	recipeID := ctx.Param("recipeID")
-	err := client.SaveUserRecipe(userID, recipeID)
-	if err != nil {
-		fmt.Println(err)
+	output, err := client.SaveUserRecipe(userID, recipeID)
+	b, berr := json.Marshal(output)
+	if berr != nil {
+		fmt.Println(berr)
 		ctx.JSON(http.StatusInternalServerError, "")
 	}
-	ctx.JSON(http.StatusOK, "")
+	if err != nil {
+		log.Println(err)
+		ctx.Data(http.StatusInternalServerError, gin.MIMEJSON, b)
+	}
+	ctx.Data(http.StatusOK, gin.MIMEJSON, b)
 }
 
-// @Summary     Get saved recipe data from mongodb database
-// @Description Get recipes based on userID
+// @Summary     Get saved recipes based on userID
+// @Description Get saved recipes based on userID from MongoDB
 // @Produce     json
 // @Param       userID path string true "userID"
+// @Success     200 {object} api.SavedRecipeResp.Results
+// @Failure     500  {object}  api.RespMessage
 // @Router      /getrecipes/{userID} [get]
 func GetSavedRecipes(ctx *gin.Context) {
 	client := api.NewClient(os.Getenv("RECIPE_API_KEY")) // get API key fron env var
 	userID := ctx.Param("userID")
-	client.GetUserSavedRecipes(userID)
-	ctx.JSON(http.StatusOK, "")
+	output := client.GetUserSavedRecipes(userID)
+	b, err := json.Marshal(output.Results)
+	if err != nil {
+		log.Println(err)
+		ctx.JSON(http.StatusInternalServerError, "")
+	}
+	ctx.Data(http.StatusOK, gin.MIMEJSON, b)
 }
